--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "msw": "^0.43.0",
+    "node-match-path": "^0.6.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.3"
   }
