fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "localhost:3000",
+  "name": "popcorn-books",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -64,7 +64,6 @@
     "autoprefixer": "^10.4.7",
     "cypress": "^10.3.0",
     "cypress-hmr-restarter": "^2.0.3",
-    "cypress-msw-interceptor": "^2.0.3",
     "eslint-plugin-cypress": "^2.12.1",
     "msw": "^0.43.0",
     "node-match-path": "^0.6.3",
